@@ -8,6 +8,7 @@ few of the many members that have contributed to Nagios in various ways
 since 1999.  If I missed your name, misspelled it or otherwise got it
 wrong, please let me know.
 
+* Aaron Beck
 * Adam Bowen
 * Ahmon Dancy
 * Alain Radix
