@@ -2,12 +2,18 @@
 Nagios Core 4 Change Log
 ########################
 
+Future Version - 
+----------------
+* Fixed a lockup condition sometimes encountered on shutdown or restart (Aaron Beck)
+
+
 4.3.4 - 2017-08-24
 ------------------
 * Improved config file parsing (Mark Felder)
 * Fixed configure script to check for existence of /run for lock file (in regards to CVE-2017-12847, Bryan Heden)
 * Use absolute paths when deleting check results files (Emmanuel Dreyfus)
 * Add sanity checking in reassign_worker (sq5bpf)
+
 
 4.3.3 - 2017-08-12
 ------------------
